# VibeDrop

./: .gitignore  Cargo.toml.backup  LICENSE  README.md  open-home-vault-viewer.html  open-home-vault-viewer.webloc
.github/workflows/: ci.yml  release.yml
desktop/share-extension/VibeDropShare/: Info.plist  ShareViewController.swift
desktop/share-extension/VibeDropShare.xcodeproj/: project.pbxproj
desktop/src/: index.html  main.js  style.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src_backup/: main.rs
desktop/static/: app.js  index.html  manifest.json  style.css  sw.js
docs/: android-debuggable-always-on-spec.md  android-sqlite-media-restore-spec.md  batch-transfer-spec.md  clipboard-direct-send-spec.md  connection-event-log-spec.md  connection-self-healing-spec.md  connection-stability-spec.md  current-handoff-2026-06-20.md  discovery-robustness-spec.md  download-inbox-spec.md  heatmap-native-scroll-spec.md  heatmap-visible-window-contrast-spec.md  history-search-spec.md  home-vault-device-filter-key-spec.md  home-vault-direct-sync-spec.md  home-vault-explicit-device-role-fields-spec.md  home-vault-sync-spec.md  hotspot-smart-discovery-spec.md  icon-geometry-recovery-spec.md  icon-sharpness-spec.md  icon-source-unification-spec.md  ios-app-icon-asset-sync-spec.md  ios-direct-install-fallback-spec.md  ios-icon-padding-spec.md  ios-mobile-port-spec.md  ios-personal-team-signing-spec.md  ios-xcode-rust-build-path-spec.md  large-file-transfer-spec.md  macos-tray-icon-sizing-spec.md  macos-tray-menu-polish-spec.md  mobile-launcher-icon-padding-spec.md  native-android-device-order-spec.md  native-android-history-identity-merge-spec.md  native-android-history-identity-metadata-spec.md  native-android-history-media-preview-spec.md  native-android-history-status-label-spec.md  native-android-legacy-device-config-migration-spec.md  native-android-legacy-history-envelope-import-spec.md  native-android-legacy-history-identity-spec.md  native-android-mixed-share-payload-spec.md  (+19 more)
docs/protocol-v1-fixtures/: README.md
docs/protocol-v1-fixtures/history/: android-history-export.json  macos-history-entry.json
docs/protocol-v1-fixtures/messages/: auth-clipboard-sync.json  auth-ok.json  auth-primary.json  clipboard.json  discover-probe.json  discover-response.json  enter.json  file-download.json  image-clipboard.json  incoming-file-chunk.json  incoming-file-complete.json  incoming-file-error.json  incoming-file-saved.json  incoming-file-start.json  incoming-history-session-start.json  pair-request.json  pair-status-approved.json  ping.json  pong.json  type-enter.json  type.json
mobile/: package-lock.json  package.json
mobile/src/: app.js  index.html  manifest.json  style.css
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/icons/android/values/: ic_launcher_background.xml
mobile/src-tauri/src/: lib.rs
native/: README.md
native/android/: README.md  settings.gradle.kts
native/android/app/: build.gradle.kts  proguard-rules.pro
native/android/gradle/: libs.versions.toml
native/macos/: Package.resolved  Package.swift  README.md
native/macos/Sources/VibeDropMacApp/: MacAppResources.swift  MacContentView.swift  MacDiagnosticLogStore.swift  (+4 more)
scripts/: deploy-android.sh  deploy-desktop.sh  deploy-ios.sh  deploy-native-android-release.sh  deploy-native-android.sh  deploy-native-macos-release.sh  deploy-native-macos.sh  generate-app-icons.py  generate-share-extension-project.rb  generate-tray-frames.py  home-vault-receiver.py  install-finder-send-workflow.py  run-tauri-ios-xcode-script.sh  sync-home-vault.py
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/certs/: cert.pem  key.pem
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
static/: app.js  index.html  manifest.json  rootCA.pem  style.css  sw.js
tests/: test_home_vault_device_roles.py
(+80 files in other folders)
