[package]
name = "voicedrop"
version = "0.1.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
enigo = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
local-ip-address = "0.6"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
png = "0.17"
arboard = "3"
futures-util = "0.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
mime_guess = "2"
walkdir = "2"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
